<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.cmbsoft</groupId>
    <artifactId>LiveControl</artifactId>
    <version>0.1-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.processing</groupId>
            <artifactId>core</artifactId>
            <version>4.3</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>be.cmbsoft</groupId>
            <artifactId>LaserOutput</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>be.cmbsoft</groupId>
            <artifactId>Oscillabstract</artifactId>
            <version>1.0_standalone-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jogamp.jogl/jogl-all-main -->
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>2.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all</artifactId>
            <version>2.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt</artifactId>
            <version>2.3.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jogamp.jogl/newt -->
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>newt</artifactId>
            <version>2.3.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jogamp.jogl/jogl-all-natives-windows-amd64 -->
        <!--        <dependency>-->
        <!--            <groupId>org.jogamp.jogl</groupId>-->
        <!--            <artifactId>jogl-all-natives-windows-amd64</artifactId>-->
        <!--            <version>2.4.0-rc-20210111</version>-->
        <!--        </dependency>-->
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>com.cmbsoft</groupId>
            <artifactId>CGui</artifactId>
            <version>0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>controlP5</groupId>
            <artifactId>controlP5</artifactId>
            <version>2.2.6</version>
        </dependency>
        <dependency>
            <groupId>processing</groupId>
            <artifactId>sound</artifactId>
            <version>2.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.jsyn</groupId>
            <artifactId>jsyn</artifactId>
            <version>17.1.0</version>
        </dependency>
        <dependency>
            <groupId>MidiBus</groupId>
            <artifactId>MidiBus</artifactId>
            <version>8</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>